@@ -24,7 +24,7 @@ SET @saved_cs_client     = @@character_set_client;
 SET character_set_client = utf8;
 CREATE TABLE `annotation` (
   `id_annotation` bigint(20) unsigned NOT NULL AUTO_INCREMENT,
-  `id_user` bigint(20) unsigned NOT NULL DEFAULT '0',
+  `id_user` bigint(20) unsigned NOT NULL,
   `date` datetime NOT NULL DEFAULT '0000-00-00 00:00:00',
   `comment` text NOT NULL,
   `attachment_name` varchar(128) DEFAULT NULL,
@@ -111,7 +111,7 @@ CREATE TABLE `event` (
   `date` datetime NOT NULL DEFAULT '0000-00-00 00:00:00',
   `description` varchar(255) DEFAULT NULL,
   `entity_id` bigint(20) unsigned NOT NULL DEFAULT '0' COMMENT 'the id of the entity having id_event_type.id_entity_type',
-  `id_user` bigint(20) unsigned NOT NULL DEFAULT '0',
+  `id_user` bigint(20) unsigned NOT NULL,
   `notification_sent` timestamp NOT NULL DEFAULT '0000-00-00 00:00:00',
   PRIMARY KEY (`id_event`),
   KEY `ev_u` (`id_user`),
@@ -329,7 +329,7 @@ CREATE TABLE `instrument_status` (
   `id_instrument` bigint(20) unsigned NOT NULL DEFAULT '0',
   `id_instrument_status_dict` bigint(20) unsigned NOT NULL DEFAULT '0',
   `date` datetime NOT NULL DEFAULT '0000-00-00 00:00:00',
-  `id_user` bigint(20) unsigned NOT NULL DEFAULT '0',
+  `id_user` bigint(20) unsigned NOT NULL,
   `comment` text,
   `iscurrent` tinyint(3) unsigned NOT NULL DEFAULT '0',
   PRIMARY KEY (`id_instrument_status`),
@@ -565,7 +565,7 @@ CREATE TABLE `run_lane_status` (
   `id_run_lane_status` bigint(20) unsigned NOT NULL AUTO_INCREMENT,
   `id_run_lane` bigint(20) unsigned NOT NULL DEFAULT '0',
   `date` datetime NOT NULL DEFAULT '0000-00-00 00:00:00',
-  `id_user` bigint(20) unsigned DEFAULT NULL,
+  `id_user` bigint(20) unsigned NOT NULL,
   `iscurrent` tinyint(1) NOT NULL DEFAULT '0',
   `id_run_lane_status_dict` bigint(20) unsigned NOT NULL DEFAULT '0',
   PRIMARY KEY (`id_run_lane_status`),
@@ -624,7 +624,7 @@ CREATE TABLE `run_status` (
   `id_run` bigint(20) unsigned NOT NULL DEFAULT '0',
   `date` datetime NOT NULL DEFAULT '0000-00-00 00:00:00',
   `id_run_status_dict` int(11) NOT NULL DEFAULT '0',
-  `id_user` bigint(20) unsigned DEFAULT NULL COMMENT 'operator',
+  `id_user` bigint(20) unsigned NOT NULL COMMENT 'operator',
   `iscurrent` tinyint(1) NOT NULL DEFAULT '0',
   PRIMARY KEY (`id_run_status`),
   KEY `id_rsd` (`id_run_status_dict`),
@@ -790,7 +790,7 @@ CREATE TABLE `tag_run` (
   `id_tag_run` bigint(20) unsigned NOT NULL AUTO_INCREMENT,
   `id_run` bigint(20) unsigned NOT NULL DEFAULT '0',
   `id_tag` bigint(20) unsigned NOT NULL DEFAULT '0',
-  `id_user` bigint(20) unsigned NOT NULL DEFAULT '0',
+  `id_user` bigint(20) unsigned NOT NULL,
   `date` date NOT NULL DEFAULT '0000-00-00',
   PRIMARY KEY (`id_tag_run`),
   UNIQUE KEY `u_idrun_idtag` (`id_run`,`id_tag`),
@@ -814,7 +814,7 @@ CREATE TABLE `tag_run_lane` (
   `id_tag_run_lane` bigint(20) unsigned NOT NULL AUTO_INCREMENT,
   `id_run_lane` bigint(20) unsigned NOT NULL DEFAULT '0',
   `id_tag` bigint(20) unsigned NOT NULL DEFAULT '0',
-  `id_user` bigint(20) unsigned NOT NULL DEFAULT '0',
+  `id_user` bigint(20) unsigned NOT NULL,
   `date` date NOT NULL DEFAULT '0000-00-00',
   PRIMARY KEY (`id_tag_run_lane`),
   KEY `trl_id_run_lane` (`id_run_lane`),
@@ -852,7 +852,7 @@ SET @saved_cs_client     = @@character_set_client;
 SET character_set_client = utf8;
 CREATE TABLE `user2usergroup` (
   `id_user_usergroup` bigint(20) unsigned NOT NULL AUTO_INCREMENT,
-  `id_user` bigint(20) unsigned NOT NULL DEFAULT '0',
+  `id_user` bigint(20) unsigned NOT NULL,
   `id_usergroup` bigint(20) unsigned NOT NULL DEFAULT '0',
   `level` tinyint(3) unsigned DEFAULT NULL,
   PRIMARY KEY (`id_user_usergroup`),
